--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,7 @@
 # This is Git's per-user configuration file.
 [user]
-# Please adapt and uncomment the following lines:
-#	name = thomas-allibe
-#	email = thomas.allibe@gmail.com
+name = thomas-allibe
+email = thomas.allibe@gmail.com
+
+[core]
+editor = nvim
